// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 13 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Bon chance Agui pour le nuage de mots. G\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Un jeu stylé de fou.\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Plus d'idées de jeux.\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Total War: Rome\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Bon chance Agui pour le nuage de mots. !\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Bon chance Agui pour le nuage de mots. B\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Bon chance Agui pour le nuage de mots. M\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Bon chance Agui pour le nuage de mots. T\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Bon chance Agui pour le nuage de mots. J\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Total War 3: Warhammer\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Total War: Britannia\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Total War: Warhammer\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Total War Saga: Troy\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Total War: Three Kingdoms \\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Total War 2: Warhammer\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Natation\\",\\"Sports collectifs\\"],\\"other\\":\\"Civilization 6\\"}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Athlétisme\\",\\"Sports collectifs\\"],\\"other\\":\\"Guild Wars 2\\"}",
          },
        },
      ],
      "totalCount": 17,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 14 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Maxime Arrouard\\"],\\"other\\":null}",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 15 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "Pas assez fort (Mon sonotone est en panne)",
          },
        },
        Object {
          "node": Object {
            "value": "Assez fort (Mon sonotone est mal réglé)",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 16 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 17 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 18 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Logo 1\\"],\\"other\\":null}",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 19 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Il bluffe\\"],\\"other\\":null}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Il bluffe\\"],\\"other\\":null}",
          },
        },
        Object {
          "node": Object {
            "value": "{\\"labels\\":[\\"Oui\\"],\\"other\\":null}",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 20 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 21 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 22 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 23 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 24 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 25 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 26 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`MultipleChoiceQuestion.responses array fetches a multiple choice question's responses: 27 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;
